--- a/src/main/resources/templates/post/search.html
+++ b/src/main/resources/templates/post/search.html
@@ -8,7 +8,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <title>게시판 별 게시물</title>
+    <title>검색 결과</title>
 </head>
 <body>
 <header>
@@ -28,21 +28,13 @@
     </div>
 </header>
 <div class="container">
-    <div class="search-wrapper">
-        <div class="search-bar">
-            <form th:action="@{/posts/search}" method="get">
-                <input class="search-word" type="text" th:name="searchWord">
-                <button class="search-button" type="submit">
-                    <span class="material-symbols-outlined">search</span>
-                </button>
-            </form>
-        </div>
-        <button class="board-list" th:onclick="|location.href='@{/boards}'|">게시판 목록보기</button>
-    </div>
-
-    <div class="board-list-wapper">
-        <button class="board-all" th:onclick="|location.href='@{/posts/all}'|">전체</button>
-        <button class="board" th:each="board : ${boards}" th:text="${board.getName()}"></button>
+    <div class="search-bar">
+        <form th:action="@{/posts/search}" method="get">
+            <input class="search-word" type="text" th:name="searchWord">
+            <button class="search-button" type="submit">
+                <span class="material-symbols-outlined">search</span>
+            </button>
+        </form>
     </div>
     <div class="post-list-wapper">
         <div class="line"></div>
@@ -73,11 +65,21 @@
             </div>
         </div>
     </div>
-    <div class="page-wapper">
-        <span class="material-symbols-outlined"> navigate_before </span>
-        <span class="page-number">1</span>
-        <span class="material-symbols-outlined"> navigate_next </span>
-    </div>
+    <form class="page-wapper" th:action="@{/posts/search}">
+        <button class="left-wrapper">
+            <!--            현재 페이지 기준 한칸 이전-->
+            <span class="material-symbols-outlined"> navigate_before </span>
+        </button>
+        <!--        페이지 수에 맞게 늘어나게-->
+        <button class="page-number-wrapper" type="submit" th:name="page" th:value=1>
+            <span class="page-number">1</span>
+        </button>
+        <!--            현재 페이지 기준 한칸 이후-->
+        <button class="right-wrapper">
+            <span class="material-symbols-outlined"> navigate_next </span>
+        </button>
+
+    </form>
 </div>
 </body>
 </html>
